fix arrow alignment

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -152,11 +152,9 @@
 
 .arrows {
   width: 60px;
-  height: 72px;
-  position: absolute;
-  left: 50%;
-  margin-left: -30px;
-  bottom: 20px;
+  height: 76px;
+  margin-left: 46.5%;
+  margin-top: -2%;
 }
 
 .arrows path {
