--- a/src/styles/interests.css
+++ b/src/styles/interests.css
@@ -16,7 +16,6 @@
 .interest-container {
     display: flex;
     flex-direction: row;
-    margin-top: 5%;
 }
 
 .interest-left {
